:memo: config swagger done
